# TKL

./: CMakeLists.txt  README.md  best_model.pt  pointnet2_sem_seg.py  read_npy.cpp  read_npy.py  save_data.npy  save_data_output.npy  scr_so.cpp  use_dll.cpp
